implementation/ECLparser/parser/ECLParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .ECLVisitor import ECLVisitor
else:
    from ECLVisitor import ECLVisitor



class ECLParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'('", u"')'", u"':'", u"'^'", u"'<'", 
                     u"'<<'", u"'>'", u"'>>'", u"','", u"'{'", u"'}'", u"'['", 
                     u"']'", u"'='", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"'*'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"WS", u"MEMBEROF", 
                      u"SCTID", u"STAR", u"ANY", u"TERM", u"COMMENT", u"DESCENDANTOF", 
                      u"DESCENDANTORSELFOF", u"ANCESTOROF", u"ANCESTORORSELFOF", 
                      u"AND", u"DISJUNCTION", u"MINUS", u"NONNEGATIVEINTEGERVALUE", 
                      u"TO", u"MANY", u"REVERSEFLAG", u"NEQ", u"NUMERICVALUE", 
                      u"STRINGVALUE", u"ESCAPEDCHAR", u"DIGITNONZERO", u"DIGIT" ]

    RULE_expressionConstraint = 0
    RULE_unrefinedExpressionConstraint = 1
    RULE_simpleExpressionConstraint = 2
    RULE_compoundExpressionConstraint = 3
    RULE_conjunctionExpressionConstraint = 4
    RULE_disjunctionExpressionConstraint = 5
    RULE_exclusionExpressionConstraint = 6
    RULE_subExpressionConstraint = 7
    RULE_refinedExpressionConstraint = 8
    RULE_focusConcept = 9
    RULE_memberOf = 10
    RULE_conceptReference = 11
    RULE_conceptId = 12
    RULE_wildCard = 13
    RULE_term = 14
    RULE_constraintOperator = 15
    RULE_descendantOf = 16
    RULE_descendantOrSelfOf = 17
    RULE_ancestorOf = 18
    RULE_ancestorOrSelfOf = 19
    RULE_conjunction = 20
    RULE_disjunction = 21
    RULE_exclusion = 22
    RULE_refinement = 23
    RULE_conjunctionRefinementSet = 24
    RULE_disjunctionRefinementSet = 25
    RULE_subRefinement = 26
    RULE_attributeSet = 27
    RULE_conjunctionAttributeSet = 28
    RULE_disjunctionAttributeSet = 29
    RULE_subAttributeSet = 30
    RULE_attributeGroup = 31
    RULE_attribute = 32
    RULE_cardinality = 33
    RULE_many = 34
    RULE_reverseFlag = 35
    RULE_attributeOperator = 36
    RULE_attributeName = 37
    RULE_expressionConstraintValue = 38
    RULE_expressionComparisonOperator = 39
    RULE_numericComparisonOperator = 40
    RULE_stringComparisonOperator = 41
    RULE_numericValue = 42
    RULE_stringValue = 43

    ruleNames =  [ "expressionConstraint", "unrefinedExpressionConstraint", 
                   "simpleExpressionConstraint", "compoundExpressionConstraint", 
                   "conjunctionExpressionConstraint", "disjunctionExpressionConstraint", 
                   "exclusionExpressionConstraint", "subExpressionConstraint", 
                   "refinedExpressionConstraint", "focusConcept", "memberOf", 
                   "conceptReference", "conceptId", "wildCard", "term", 
                   "constraintOperator", "descendantOf", "descendantOrSelfOf", 
                   "ancestorOf", "ancestorOrSelfOf", "conjunction", "disjunction", 
                   "exclusion", "refinement", "conjunctionRefinementSet", 
                   "disjunctionRefinementSet", "subRefinement", "attributeSet", 
                   "conjunctionAttributeSet", "disjunctionAttributeSet", 
                   "subAttributeSet", "attributeGroup", "attribute", "cardinality", 
                   "many", "reverseFlag", "attributeOperator", "attributeName", 
                   "expressionConstraintValue", "expressionComparisonOperator", 
                   "numericComparisonOperator", "stringComparisonOperator", 
                   "numericValue", "stringValue" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    WS=15
    MEMBEROF=16
    SCTID=17
    STAR=18
    ANY=19
    TERM=20
    COMMENT=21
    DESCENDANTOF=22
    DESCENDANTORSELFOF=23
    ANCESTOROF=24
    ANCESTORORSELFOF=25
    AND=26
    DISJUNCTION=27
    MINUS=28
    NONNEGATIVEINTEGERVALUE=29
    TO=30
    MANY=31
    REVERSEFLAG=32
    NEQ=33
    NUMERICVALUE=34
    STRINGVALUE=35
    ESCAPEDCHAR=36
    DIGITNONZERO=37
    DIGIT=38

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ExpressionConstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ECLParser.EOF, 0)

        def refinedExpressionConstraint(self):
            return self.getTypedRuleContext(ECLParser.RefinedExpressionConstraintContext,0)


        def unrefinedExpressionConstraint(self):
            return self.getTypedRuleContext(ECLParser.UnrefinedExpressionConstraintContext,0)


        def getRuleIndex(self):
            return ECLParser.RULE_expressionConstraint

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ECLVisitor ):
                return visitor.visitExpressionConstraint(self)
            else:
                return visitor.visitChildren(self)




    def expressionConstraint(self):

        localctx = ECLParser.ExpressionConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_expressionConstraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 88
                self.refinedExpressionConstraint()
                pass

            elif la_ == 2:
                self.state = 89
                self.unrefinedExpressionConstraint()
                pass


            self.state = 92
            self.match(ECLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnrefinedExpressionConstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compoundExpressionConstraint(self):
            return self.getTypedRuleContext(ECLParser.CompoundExpressionConstraintContext,0)


        def simpleExpressionConstraint(self):
            return self.getTypedRuleContext(ECLParser.SimpleExpressionConstraintContext,0)


        def getRuleIndex(self):
            return ECLParser.RULE_unrefinedExpressionConstraint

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ECLVisitor ):
                return visitor.visitUnrefinedExpressionConstraint(self)
            else:
                return visitor.visitChildren(self)




    def unrefinedExpressionConstraint(self):

        localctx = ECLParser.UnrefinedExpressionConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_unrefinedExpressionConstraint)
        try:
            self.state = 96
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.compoundExpressionConstraint()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.simpleExpressionConstraint()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SimpleExpressionConstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def focusConcept(self):
            return self.getTypedRuleContext(ECLParser.FocusConceptContext,0)


        def constraintOperator(self):
            return self.getTypedRuleContext(ECLParser.ConstraintOperatorContext,0)


        def getRuleIndex(self):
            return ECLParser.RULE_simpleExpressionConstraint

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ECLVisitor ):
                return visitor.visitSimpleExpressionConstraint(self)
            else:
                return visitor.visitChildren(self)




    def simpleExpressionConstraint(self):

        localctx = ECLParser.SimpleExpressionConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simpleExpressionConstraint)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ECLParser.T__4) | (1 << ECLParser.T__5) | (1 << ECLParser.T__6) | (1 << ECLParser.T__7) | (1 << ECLParser.DESCENDANTOF) | (1 << ECLParser.DESCENDANTORSELFOF) | (1 << ECLParser.ANCESTOROF) | (1 << ECLParser.ANCESTORORSELFOF))) != 0):
                self.state = 98
                self.constraintOperator()


            self.state = 101
            self.focusConcept()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompoundExpressionConstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conjunctionExpressionConstraint(self):
            return self.getTypedRuleContext(ECLParser.ConjunctionExpressionConstraintContext,0)


        def disjunctionExpressionConstraint(self):
            return self.getTypedRuleContext(ECLParser.DisjunctionExpressionConstraintContext,0)


        def exclusionExpressionConstraint(self):
            return self.getTypedRuleContext(ECLParser.ExclusionExpressionConstraintContext,0)


        def compoundExpressionConstraint(self):
            return self.getTypedRuleContext(ECLParser.CompoundExpressionConstraintContext,0)


        def getRuleIndex(self):
            return ECLParser.RULE_compoundExpressionConstraint

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ECLVisitor ):
                return visitor.visitCompoundExpressionConstraint(self)
            else:
                return visitor.visitChildren(self)




    def compoundExpressionConstraint(self):

        localctx = ECLParser.CompoundExpressionConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_compoundExpressionConstraint)
        try:
            self.state = 110
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.conjunctionExpressionConstraint()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.disjunctionExpressionConstraint()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.exclusionExpressionConstraint()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 106
                self.match(ECLParser.T__0)
                self.state = 107
                self.compoundExpressionConstraint()
                self.state = 108
                self.match(ECLParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConjunctionExpressionConstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subExpressionConstraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ECLParser.SubExpressionConstraintContext)
            else:
                return self.getTypedRuleContext(ECLParser.SubExpressionConstraintContext,i)


        def conjunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ECLParser.ConjunctionContext)
            else:
                return self.getTypedRuleContext(ECLParser.ConjunctionContext,i)


        def getRuleIndex(self):
            return ECLParser.RULE_conjunctionExpressionConstraint

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ECLVisitor ):
                return visitor.visitConjunctionExpressionConstraint(self)
            else:
                return visitor.visitChildren(self)




    def conjunctionExpressionConstraint(self):

        localctx = ECLParser.ConjunctionExpressionConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_conjunctionExpressionConstraint)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.subExpressionConstraint()
            self.state = 116 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 113
                self.conjunction()
                self.state = 114
                self.subExpressionConstraint()
                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ECLParser.T__8 or _la==ECLParser.AND):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DisjunctionExpressionConstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subExpressionConstraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ECLParser.SubExpressionConstraintContext)
            else:
                return self.getTypedRuleContext(ECLParser.SubExpressionConstraintContext,i)


        def disjunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ECLParser.DisjunctionContext)
            else:
                return self.getTypedRuleContext(ECLParser.DisjunctionContext,i)


        def getRuleIndex(self):
            return ECLParser.RULE_disjunctionExpressionConstraint

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ECLVisitor ):
                return visitor.visitDisjunctionExpressionConstraint(self)
            else:
                return visitor.visitChildren(self)




    def disjunctionExpressionConstraint(self):

        localctx = ECLParser.DisjunctionExpressionConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_disjunctionExpressionConstraint)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.subExpressionConstraint()
            self.state = 124 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 121
                self.disjunction()
                self.state = 122
                self.subExpressionConstraint()
                self.state = 126 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ECLParser.DISJUNCTION):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExclusionExpressionConstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subExpressionConstraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ECLParser.SubExpressionConstraintContext)
            else:
                return self.getTypedRuleContext(ECLParser.SubExpressionConstraintContext,i)


        def exclusion(self):
            return self.getTypedRuleContext(ECLParser.ExclusionContext,0)


        def getRuleIndex(self):
            return ECLParser.RULE_exclusionExpressionConstraint

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ECLVisitor ):
                return visitor.visitExclusionExpressionConstraint(self)
            else:
                return visitor.visitChildren(self)




    def exclusionExpressionConstraint(self):

        localctx = ECLParser.ExclusionExpressionConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_exclusionExpressionConstraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.subExpressionConstraint()
            self.state = 129
            self.exclusion()
            self.state = 130
            self.subExpressionConstraint()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubExpressionConstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleExpressionConstraint(self):
            return self.getTypedRuleContext(ECLParser.SimpleExpressionConstraintContext,0)


        def compoundExpressionConstraint(self):
            return self.getTypedRuleContext(ECLParser.CompoundExpressionConstraintContext,0)


        def refinedExpressionConstraint(self):
            return self.getTypedRuleContext(ECLParser.RefinedExpressionConstraintContext,0)


        def getRuleIndex(self):
            return ECLParser.RULE_subExpressionConstraint

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ECLVisitor ):
                return visitor.visitSubExpressionConstraint(self)
            else:
                return visitor.visitChildren(self)




    def subExpressionConstraint(self):

        localctx = ECLParser.SubExpressionConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_subExpressionConstraint)
        try:
            self.state = 140
            token = self._input.LA(1)
            if token in [ECLParser.T__3, ECLParser.T__4, ECLParser.T__5, ECLParser.T__6, ECLParser.T__7, ECLParser.MEMBEROF, ECLParser.SCTID, ECLParser.STAR, ECLParser.ANY, ECLParser.DESCENDANTOF, ECLParser.DESCENDANTORSELFOF, ECLParser.ANCESTOROF, ECLParser.ANCESTORORSELFOF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.simpleExpressionConstraint()

            elif token in [ECLParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.match(ECLParser.T__0)
                self.state = 136
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 134
                    self.compoundExpressionConstraint()
                    pass

                elif la_ == 2:
                    self.state = 135
                    self.refinedExpressionConstraint()
                    pass


                self.state = 138
                self.match(ECLParser.T__1)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RefinedExpressionConstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unrefinedExpressionConstraint(self):
            return self.getTypedRuleContext(ECLParser.UnrefinedExpressionConstraintContext,0)


        def refinement(self):
            return self.getTypedRuleContext(ECLParser.RefinementContext,0)


        def refinedExpressionConstraint(self):
            return self.getTypedRuleContext(ECLParser.RefinedExpressionConstraintContext,0)


        def getRuleIndex(self):
            return ECLParser.RULE_refinedExpressionConstraint

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ECLVisitor ):
                return visitor.visitRefinedExpressionConstraint(self)
            else:
                return visitor.visitChildren(self)




    def refinedExpressionConstraint(self):

        localctx = ECLParser.RefinedExpressionConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_refinedExpressionConstraint)
        try:
            self.state = 150
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.unrefinedExpressionConstraint()
                self.state = 143
                self.match(ECLParser.T__2)
                self.state = 144
                self.refinement()
                pass
